spring-demo-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdemo-v1
  labels:
    app: springdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springdemo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: springdemo
        version: v1
    spec:
      containers:
        - name: srpingdemo
          image: servicemashdemo_demo
          imagePullPolicy: Never
          ports:
            - containerPort: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: srpingdemo
  labels:
    app: srpingdemo
spec:
  selector:
    app: srpingdemo
  ports:
    - port: 7979
      name: http
  type: NodePort
